--- a/Applications/Control/Localization/Russian.lang
+++ b/Applications/Control/Localization/Russian.lang
@@ -1,7 +1,8 @@
 {
-	moduleDisk = "Дисковая утилита",
-	moduleRAM = "Управление памятью",
-	moduleEvent = "Анализ событий",
+	moduleDisk = "Диски",
+	moduleRAM = "Память",
+	moduleEvent = "События",
+	moduleLua = "Интерпретатор Lua",
 
 	diskLabel = "Имя диска",
 	bootable = "Загрузочный",
@@ -13,4 +14,11 @@
 	execute = "Выполнить",
 	waitingEvents = "Ожидание событий",
 	processingEnabled = "Обработка событий",
+	luaInfo = {
+		{color = 0x880000, text = _G._VERSION .. " Copyright (C) 1994-2017 Lua.org, PUC-Rio"},
+		"Введите выражение и нажмите Enter, чтобы выполнить его",
+		"Используйте префикс \"=\", чтобы вывести значение переменной",
+		" ",
+	},
+	luaType = "Введите выражение здесь"
 }
