Поддержка создания вторичных окон из Dock и их смещения на несколько пикселей в автоматическом режиме

--- a/Localization/English.lang
+++ b/Localization/English.lang
@@ -18,6 +18,7 @@
 	select = "Choose application…",
 	keepInDock = "Keep in dock",
 	closeAllWindows = "Close all windows",
+	newWindow = "New window",
 	launchWithArguments = "Launch with arguments",
 	dontShowAnymore = "Don't show again",
 	applicationHelp = "About application",
