--- a/Localization/Russian.lang
+++ b/Localization/Russian.lang
@@ -18,6 +18,7 @@
 	select = "Выбрать программу…",
 	keepInDock = "Оставить в Dock",
 	closeAllWindows = "Закрыть все окна",
+	newWindow = "Новое окно",
 	launchWithArguments = "Запустить с аргументами",
 	dontShowAnymore = "Больше не показывать",
 	applicationHelp = "О приложении",
