Много фич по работе с иконками

--- a/Localization/English.lang
+++ b/Localization/English.lang
@@ -56,7 +56,6 @@
 	unknown = "Unknown",
 	calculatingSize = "calculating…",
 
-	view = "View",
 	properties = "Properties",
 	newFolderFromChosen = "New folder from chosen",
 	create = "New",
@@ -84,16 +83,13 @@
 	showContainingFolder = "Show containing folder",
 	flashEEPROM = "Write on EEPROM",
 
-	sortBy = "Sorting method",
+	sortBy = "Sort",
 	sortByType = "By type",
 	sortByName = "By name",
 	sortByDate = "By date",
-	showExtension = "Show file extension",
-	hideExtension = "Hide file extension",
-	showHiddenFiles = "Show hidden files",
-	hideHiddenFiles = "Don't show hidden files",
-	showApplicationIcons = "Show application icons",
-	hideApplicationIcons = "Hide application icons",
+	showExtension = "File extensions",
+	showHiddenFiles = "Hidden files",
+	showApplicationIcons = "Application icons",
 
 	aboutSystem = "About this PC",
 	updates = "Updates",
@@ -124,8 +120,10 @@
 	mineOSCreatorUsedMasterPassword = "The creator of this operating system has used Master-Password",
 	loginToSystem = "Login",
 
-	colorScheme = "Appearance",
+	colorScheme = "Color scheme",
+	iconProperties = "Icons properties",
 	spaceBetweenIcons = "Space bewteen icons",
+	sizeOfIcons = "Size of icons",
 	byHorizontal = "Horizontal",
 	byVertical = "Vertical",
 	wallpaper = "Wallpaper",
