--- a/Localization/Russian.lang
+++ b/Localization/Russian.lang
@@ -56,7 +56,6 @@
 	unknown = "Неизвестно",
 	calculatingSize = "идет подсчет…",
 	
-	view = "Вид",
 	properties = "Свойства",
 	newFolderFromChosen = "Новая папка из выбранного",
 	create = "Создать",
@@ -84,16 +83,13 @@
 	showContainingFolder = "Открыть содержащую папку",
 	flashEEPROM = "Записать на EEPROM",
 
-	sortBy = "Сортировка файлов",
+	sortBy = "Упорядочить",
 	sortByType = "По типу",
 	sortByName = "По имени",
 	sortByDate = "По дате",
-	showExtension = "Показывать расширение файлов",
-	hideExtension = "Скрывать расширение файлов",
-	showHiddenFiles = "Показывать скрытые файлы",
-	hideHiddenFiles = "Не показывать скрытые файлы",
-	showApplicationIcons = "Показывать иконки приложений",
-	hideApplicationIcons = "Скрывать иконки приложений",
+	showExtension = "Расширения файлов",
+	showHiddenFiles = "Скрытые файлы",
+	showApplicationIcons = "Иконки приложений",
 
 	aboutSystem = "Об этом ПК",
 	updates = "Обновления",
@@ -124,8 +120,10 @@
 	mineOSCreatorUsedMasterPassword = "Создатель операционной системы использовал мастер-ключ",
 	loginToSystem = "Вход в систему",
 
-	colorScheme = "Внешний вид",
+	colorScheme = "Цветовая схема",
+	iconProperties = "Параметры иконок",
 	spaceBetweenIcons = "Расстояние между иконками",
+	sizeOfIcons = "Размер иконок",
 	byHorizontal = "По горизонтали",
 	byVertical = "По вертикали",
 	wallpaper = "Обои",
