--- a/License/Russian.lang
+++ b/License/Russian.lang
@@ -1,23 +1,9 @@
-Внимательно прочтите условия данного лицензионного соглашения
-перед установкой операционной системы.
+Внимательно прочтите условия данного лицензионного соглашения перед установкой операционной системы:
 
-Нажимая кнопку "принимаю", Вы соглашаетесь с нижеследующим:
-  ● Вы незамедлительно поступаете в анальное рабство к автору
-    данной ОС.
-  ● Некоторые Ваши персональные данные (логины, пароли для 
-    сайтов pastebin.com и vk.com) могут быть прочитаны другими
-    людьми и использованы в корыстных целях из-за Вашей же
-    невнимательности.
-  ● Вы обязуетесь не распространять данную ОС, а также
-    отдельные ее компоненты под своим авторским знаком без указания
-    копирайта.
-  ● Вы принимаете тот факт, что автор ОС не несет какой-либо
-    ответственности за любой физический и моральный ущерб,
-    который Вы можете понести, используя данную ОС.
-  ● ...
-  ● Да кого это ебет, братан? Ноги в руки, хуй в залупу, и вперед
-    навстречу неизведанному! 
-    
-В случае несогласия с любым из вышеперечисленных пунктов,
-вы обязаны нажать сочетание клавиш Ctrl+Alt+C, чтобы завершить
-программу установки.
+Copyright (c) 2017 Timofeev Igor
+
+Данная лицензия разрешает лицам, получившим копию данного программного обеспечения и сопутствующей документации (в дальнейшем именуемыми «Программное Обеспечение»), безвозмездно использовать Программное Обеспечение без ограничений, включая неограниченное право на использование, копирование, изменение, слияние, публикацию, распространение, сублицензирование и/или продажу копий Программного Обеспечения, а также лицам, которым предоставляется данное Программное Обеспечение, при соблюдении следующих условий:
+
+Указанное выше уведомление об авторском праве и данные условия должны быть включены во все копии или значимые части данного Программного Обеспечения.
+
+ДАННОЕ ПРОГРАММНОЕ ОБЕСПЕЧЕНИЕ ПРЕДОСТАВЛЯЕТСЯ «КАК ЕСТЬ», БЕЗ КАКИХ-ЛИБО ГАРАНТИЙ, ЯВНО ВЫРАЖЕННЫХ ИЛИ ПОДРАЗУМЕВАЕМЫХ, ВКЛЮЧАЯ ГАРАНТИИ ТОВАРНОЙ ПРИГОДНОСТИ, СООТВЕТСТВИЯ ПО ЕГО КОНКРЕТНОМУ НАЗНАЧЕНИЮ И ОТСУТСТВИЯ НАРУШЕНИЙ, НО НЕ ОГРАНИЧИВАЯСЬ ИМИ. НИ В КАКОМ СЛУЧАЕ АВТОРЫ ИЛИ ПРАВООБЛАДАТЕЛИ НЕ НЕСУТ ОТВЕТСТВЕННОСТИ ПО КАКИМ-ЛИБО ИСКАМ, ЗА УЩЕРБ ИЛИ ПО ИНЫМ ТРЕБОВАНИЯМ, В ТОМ ЧИСЛЕ, ПРИ ДЕЙСТВИИ КОНТРАКТА, ДЕЛИКТЕ ИЛИ ИНОЙ СИТУАЦИИ, ВОЗНИКШИМ ИЗ-ЗА ИСПОЛЬЗОВАНИЯ ПРОГРАММНОГО ОБЕСПЕЧЕНИЯ ИЛИ ИНЫХ ДЕЙСТВИЙ С ПРОГРАММНЫМ ОБЕСПЕЧЕНИЕМ.
