--- a/License/English.lang
+++ b/License/English.lang
@@ -1,16 +1,9 @@
-Carefully read the terms of this license agreement
-before installing this operating system.
+Carefully read the terms of this license agreement before installing this operating system:
 
-By clicking "Accept", you agree with the following:
-  ● Some of your personal data (logins, passwords to
-    Pastebin.com or VK.com) can be read by other people and
-    used for personal gain.
-  ● You must not distribute this OS, as well as its
-    individual components
-  ● You accept the fact that the author of this OS
-    is not legally responsible for any physical or
-    mental injury that you may get by using this OS.
-    
-If you disagree with any term above, you must press
-the key combination Ctrl + Alt + C to quit
-Setup program.
+Copyright (C) 2017 Timofeev Igor
+
+Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE SOFTWARE BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
