--- a/Localization/English.lang
+++ b/Localization/English.lang
@@ -1,19 +1,14 @@
 {
 	network = "Network",
 	networkTimeout = "Remote computer is not responding",
-	networkMessage = "Got network message from ",
 	networkAccessDenied = "Access to the filesystem of the remote computer is denied. Contact it's owner to get appropriate privileges",
-	networkAllowReadAndWrite = "Allow filesystem access",
-	networkDenyReadAndWrite = "Deny filesystem access",
-	networkModemNotAvailable = "Modem is not available",
-	networkDisable = "Disable",
-	networkEnable = "Enable",
+	networkAllowReadAndWrite = "Filesystem access",
+	networkModemNotAvailable = "Attach modem to use network functions",
+	networkState = "Enable network mode",
+	networkComputers = "Network PCs options",
 	networkComputersNotFound = "Computers not fount",
 	networkName = "Network name",
 	networkSearchRadius = "Searching radius",
-	networkAllowMessages = "Allow to send messages",
-	networkDenyMessages = "Deny to send messages",
-	networkSendMessage = "Send messsage",
 	openWith = "Open with",
 	select = "Choose application…",
 	keepInDock = "Keep in dock",
