--- a/Localization/Russian.lang
+++ b/Localization/Russian.lang
@@ -1,19 +1,14 @@
 {
 	network = "Сеть",
 	networkTimeout = "Удаленный компьютер не ответил на запрос",
-	networkMessage = "Получено сообщение от ",
 	networkAccessDenied = "Доступ к файловой системе удаленного компьютера запрещен. Свяжитесь с его владельцем для предоставления соответствующих привилегий",
-	networkAllowReadAndWrite = "Разрешить доступ к файлам",
-	networkDenyReadAndWrite = "Запретить доступ к файлам",
-	networkModemNotAvailable = "Модем не подключен",
-	networkDisable = "Отключить",
-	networkEnable = "Включить",
-	networkComputersNotFound = "Компьютеры не обнаружены",
+	networkAllowReadAndWrite = "Доступ к файлам",
+	networkModemNotAvailable = "Подключите модем для использования сетевых функций",
+	networkState = "Включить сетевой режим",
+	networkComputers = "Параметры удаленных ПК",
+	networkComputersNotFound = "Компьютеры в сети не обнаружены",
 	networkName = "Имя компьютера",
 	networkSearchRadius = "Радиус обнаружения",
-	networkAllowMessages = "Разрешить отправку сообщений",
-	networkDenyMessages = "Запретить отправку сообщений",
-	networkSendMessage = "Отправить сообщение",
 	openWith = "Открыть с помощью",
 	select = "Выбрать программу…",
 	keepInDock = "Оставить в Dock",
