Начинаем обнову с площадкой для приложений

--- a/Applications/AppMarket/Localization/English.lang
+++ b/Applications/AppMarket/Localization/English.lang
@@ -1,17 +1,91 @@
 {
-	applications = "Applications",
-	libraries = "Libraries",
-	wallpapers = "Wallpapers",
-	other = "Other",
-	updates = "Updates",
-	checkingForUpdates = "Checking for updates",
-	version = "Version: ",
-	updateAll = "Update all",
-	download = "Install",
-	downloading = "Installing",
-	downloaded = "Installed",
+	categoryApplications = "Applications",
+	categoryLibraries = "Libraries",
+	categoryScripts = "Scripts",
+	categoryUpdates = "Updates",
+	categoryAccount = "Account",
+
+	statusWaiting = "Ready",
+	statusApplicationInfo = "Obtaining publication info...",
+	statusPublishingReview = "Publishing review...",
+	statusVotingReview = "Creating review vote...",
+	statusUpdatingPublication = "Updating publication info...",
+	statusUploadingPublication = "Creating publication...",
+	statusSearchingUpdates = "Searching for updates...",
+	statusUpdatingList = "Updating publication list...",
+	statusUser = "Obtaining user info...",
+	statusLoggingIn = "Logging in...",
+	statusRegistering = "Creating new user...",
+
+	areYouSure = "Are your sure want to delete publication?",
+	createShortcut = "Create desktop shortcut",
+	editing = "Edit publication",
+	publicationName = "Publication name",
+	mainFileURL = "Main file URL",
+	mainFileName = "Main file name",
+	iconURL = "Mail file URL",
+	description = "Description",
+	dependenciesAndResources = "Dependencies and resources",
+	save = "Save",
+	cancel = "Cancel",
+	fileName = "File name",
+	download = "Download",
+	downloading = "Downloading",
+	tree = "Tree of downloading files",
+	addDependency = "Add dependency",
+	existingPublication = "Existing publication",
+	fileByURL = "File via URL",
+	add = "Add",
+	relativePath = "Relative path",
+
+	login = "Log in",
+	profile = "Profile",
+	nickname = "Nickname",
+	password = "Password",
+	nicknameOrEmail = "E-Mail or nickname",
+	registrationDate = "Register date",
+	edit = "Edit",
+	remove = "Delete",
+	open = "Open",
+	clearCache = "Clear cache",
+	exit = "Log out",
+	language = "Descriptions language",
+	publications = "Publications",
+	notRegistered = "Not registered yet?",
+	createAccount = "Create account",
+	registrationSuccessfull = "Check your e-mail and spam folder to verify your account",
+
 	search = "Search",
-	page = "Page ",
-	youHaveNewestApps = "You have no updates.",
-	updating = "Installing ",
+	byRating = "By rating",
+	byDate = "By date",
+	byName = "By name",
+	desc = "Descending",
+	asc = "Ascending",
+	publish = "Publish software",
+	install = "Install",
+	installed = "Installed",
+	update = "Update",
+	page = "Page",
+	updateAll = "Update all",
+	noUpdates = "You have no updates",
+
+	developer = "Developer",
+	version = "Version",
+	license = "License",
+	category = "Category",
+	updated = "Updated",
+	reviews = "Reviews",
+	yourRating = "Your rating",
+	writeReviewHere = "Type review text here",
+	choosePath = "Choose path",
+	reviewsOfUsers = "Users reviews",
+	averageRating = "Average rating",
+	writeReview = "Create review",
+	dependencies = "Dependencies",
+	wasReviewHelpful = "Was this review helpful?",
+	yes = "Yes",
+	no = "No",
+	of = "of",
+	usersLoveReview = "users found this review helpful",
+	thanksForVote = "Thanks for your opinion.",
 }
