--- a/Applications/AppMarket/Localization/Russian.lang
+++ b/Applications/AppMarket/Localization/Russian.lang
@@ -1,17 +1,91 @@
 {
-	applications = "Приложения",
-	libraries = "Библиотеки",
-	wallpapers = "Обои",
-	other = "Другое",
-	updates = "Обновления",
-	checkingForUpdates = "Проверка наличия обновлений",
-	version = "Версия: ",
-	updateAll = "Обновить все",
+	categoryApplications = "Приложения",
+	categoryLibraries = "Библиотеки",
+	categoryScripts = "Скрипты",
+	categoryUpdates = "Обновления",
+	categoryAccount = "Аккаунт",
+
+	statusWaiting = "Ожидание",
+	statusApplicationInfo = "Получение информации о приложении...",
+	statusPublishingReview = "Публикация отзыва...",
+	statusVotingReview = "Оценка отзыва...",
+	statusUpdatingPublication = "Обновление информации о публикации...",
+	statusUploadingPublication = "Создание публикации...",
+	statusSearchingUpdates = "Поиск новых версий ПО...",
+	statusUpdatingList = "Обновление списка приложений...",
+	statusUser = "Получение информации о пользователе...",
+	statusLoggingIn = "Авторизация пользователя...",
+	statusRegistering = "Регистрация нового пользователя...",
+
+	areYouSure = "Вы уверены, что хотите удалить публикацию?",
+	createShortcut = "Создать ярлык на рабочем столе",
+	editing = "Редактирование публикации",
+	publicationName = "Имя публикации",
+	mainFileURL = "URL главного файла",
+	mainFileName = "Имя главного файла",
+	iconURL = "URL иконки",
+	description = "Описание",
+	dependenciesAndResources = "Зависимоси и ресурсы",
+	save = "Сохранить",
+	cancel = "Отмена",
+	fileName = "Имя файла",
 	download = "Загрузить",
 	downloading = "Загрузка",
-	downloaded = "Установлено",
+	tree = "Древо загружаемых файлов",
+	addDependency = "Добавить зависимость",
+	existingPublication = "Существующая публикация",
+	fileByURL = "Файл по URL",
+	add = "Добавить",
+	relativePath = "Относительный путь",
+
+	login = "Авторизация",
+	profile = "Профиль",
+	nickname = "Никнейм",
+	password = "Пароль",
+	nicknameOrEmail = "E-Mail или никнейм",
+	registrationDate = "Дата регистрации",
+	edit = "Изменить",
+	remove = "Удалить",
+	open = "Открыть",
+	clearCache = "Очистить кэш",
+	exit = "Выход",
+	language = "Язык описаний",
+	publications = "Публикации",
+	notRegistered = "Еще не зарегистрированы?",
+	createAccount = "Создать аккаунт",
+	registrationSuccessfull = "Проверьте свою почту и папку спама, чтобы подтвердить подтвердить аккаунт",
+
 	search = "Поиск",
-	page = "Страница ",
-	youHaveNewestApps = "У вас самое новое ПО",
-	updating = "Обновление ",
+	byRating = "По рейтингу",
+	byDate = "По дате",
+	byName = "По имени",
+	desc = "По убыванию",
+	asc = "По возрастанию",
+	publish = "Опубликовать ПО",
+	install = "Установить",
+	installed = "Установлено",
+	update = "Обновить",
+	page = "Страница",
+	updateAll = "Обновить все",
+	noUpdates = "У вас самое новое ПО",
+
+	developer = "Разработчик",
+	version = "Версия",
+	license = "Лицензия",
+	category = "Категория",
+	updated = "Обновлено",
+	reviews = "Отзывы",
+	yourRating = "Оцените приложение",
+	writeReviewHere = "Пишите отзыв здесь",
+	choosePath = "Выберите путь",
+	reviewsOfUsers = "Отзывы пользователей",
+	averageRating = "Средний рейтинг",
+	writeReview = "Оставить отзыв",
+	dependencies = "Зависимости",
+	wasReviewHelpful = "Был ли этот отзыв полезен?",
+	yes = "Да",
+	no = "Нет",
+	of = "из",
+	usersLoveReview = "пользователей считают этот отзыв полезным",
+	thanksForVote = "Спасибо за ваше мнение.",
 }
