Багфикс клика по окнам и более корректное удаление прожек из маркета

--- a/Applications/AppMarket/Localization/English.lang
+++ b/Applications/AppMarket/Localization/English.lang
@@ -70,6 +70,7 @@
 	publish = "Publish software",
 	install = "Install",
 	installed = "Installed",
+	reinstall = "Reinstall",
 	update = "Update",
 	page = "Page",
 	updateAll = "Update all",
