--- a/Applications/AppMarket/Localization/Russian.lang
+++ b/Applications/AppMarket/Localization/Russian.lang
@@ -70,6 +70,7 @@
 	publish = "Опубликовать ПО",
 	install = "Установить",
 	installed = "Установлено",
+	reinstall = "Переустановить",
 	update = "Обновить",
 	page = "Страница",
 	updateAll = "Обновить все",
