Охоспаде, да ето же БДшка по ИДшникам йоба-файлов!

--- a/Applications/AppMarket/Localization/English.lang
+++ b/Applications/AppMarket/Localization/English.lang
@@ -59,6 +59,7 @@
 	byRating = "By rating",
 	byDate = "By date",
 	byName = "By name",
+	byReviewsCount = "By reviews count",
 	desc = "Descending",
 	asc = "Ascending",
 	publish = "Publish software",
