--- a/Applications/AppMarket/Localization/Russian.lang
+++ b/Applications/AppMarket/Localization/Russian.lang
@@ -59,6 +59,7 @@
 	byRating = "По рейтингу",
 	byDate = "По дате",
 	byName = "По имени",
+	byReviewsCount = "По числу отзывов",
 	desc = "По убыванию",
 	asc = "По возрастанию",
 	publish = "Опубликовать ПО",
