Обновление локализации для крещеных

--- a/Localizations/OS/Russian.lang
+++ b/Localizations/OS/Russian.lang
@@ -164,4 +164,8 @@
 	yourContacts = "Ваши контакты",
 	additionalInfo = "Дополнительная информация",
 	stackTraceback = "Стек ошибки",
+
+	favourite = "Избранное",
+	search = "Поиск",
+	mounts = "Устройства",
 }
