И для забугорных пидоров

--- a/Localizations/OS/English.lang
+++ b/Localizations/OS/English.lang
@@ -164,4 +164,8 @@
 	yourContacts = "Your contacts",
 	additionalInfo = "Additional information",
 	stackTraceback = "Stack traceback",
+
+	favourite = "Favourite",
+	search = "Search",
+	mounts = "Mounts",
 }
