--- a/Localizations/Installer/English.lang
+++ b/Localizations/Installer/English.lang
@@ -6,5 +6,6 @@
 	reboot = "Reboot",
 	needToReboot = "MineOS has been successfully installed, enjoy",
 	terms = "I accept terms of the agreement",
-	flashingEEPROM = "Flasing BIOS...",
+	flashingEEPROM = "Installing EFI...",
+	flashEEPROM = "Install EFI",
 }
