--- a/Applications/AppMarket/Localization/Russian.lang
+++ b/Applications/AppMarket/Localization/Russian.lang
@@ -13,6 +13,7 @@
 	statisticsReviewsCount = "Число отзывов",
 	statisticsPopularPublication = "(популярная публикация)",
 
+	shittyIcon = "Слышь, хуйло, еще раз попытаешься залить в качестве иконки какую-то дичь - акк аннулирую. Переделывай, блядь!",
 	areYouSure = "Вы уверены, что хотите удалить публикацию?",
 	createShortcut = "Создать ярлык на рабочем столе",
 	editing = "Редактирование публикации",
