Поддержка клиентских соединений с FTP-серверами прям из проводника

--- a/Localizations/OS/English.lang
+++ b/Localizations/OS/English.lang
@@ -1,4 +1,11 @@
 {
+	networkFTPNewConnection = "FTP-connection",
+	networkFTPConnections = "FTP-connections",
+	networkFTPAddress = "Server address",
+	networkFTPPort = "Server port",
+	networkFTPUser = "User",
+	networkFTPPasswprd = "Password",
+	updatingFileList = "Updating file list...",
 	network = "Network",
 	networkTimeout = "Remote computer is not responding",
 	networkAccessDenied = "Access to the filesystem of the remote computer is denied. Contact it's owner to get appropriate privileges",
@@ -72,6 +79,7 @@
 	archive = "Add to archive",
 	delete = "Delete",
 	addToFavourites = "Add to favourites",
+	removeFromFavourites = "Remove from favourites",
 	setAsWallpaper = "Set as wallpaper",
 	showPackageContent = "Show package content",
 	showContainingFolder = "Show containing folder",
