--- a/Localizations/OS/Russian.lang
+++ b/Localizations/OS/Russian.lang
@@ -1,4 +1,11 @@
 {
+	networkFTPNewConnection = "FTP-подключение",
+	networkFTPConnections = "FTP-подключения",
+	networkFTPAddress = "Адрес сервера",
+	networkFTPPort = "Порт сервера",
+	networkFTPUser = "Пользователь",
+	networkFTPPasswprd = "Пароль",
+	updatingFileList = "Обновление списка файлов...",
 	network = "Сеть",
 	networkTimeout = "Удаленный компьютер не ответил на запрос",
 	networkAccessDenied = "Доступ к файловой системе удаленного компьютера запрещен. Свяжитесь с его владельцем для предоставления соответствующих привилегий",
@@ -72,6 +79,7 @@
 	archive = "Добавить в архив",
 	delete = "Удалить",
 	addToFavourites = "Добавить в избранное",
+	removeFromFavourites = "Удалить из избранного",
 	setAsWallpaper = "Установить как обои",
 	showPackageContent = "Показать содержимое пакета",
 	showContainingFolder = "Открыть содержащую папку",
