Виджет памяти и выгрузки библиотек

--- a/Localizations/OS/English.lang
+++ b/Localizations/OS/English.lang
@@ -1,4 +1,5 @@
 {
+	unloadPackage = "Unload package",
 	networkFTPNewConnection = "FTP-connection",
 	networkFTPConnections = "FTP-connections",
 	networkFTPAddress = "Server address",
