--- a/Localizations/OS/English.lang
+++ b/Localizations/OS/English.lang
@@ -1,4 +1,5 @@
 {
+	architecture = "CPU architecture",
 	unloadPackage = "Unload package",
 	networkFTPNewConnection = "FTP-connection",
 	networkFTPConnections = "FTP-connections",
@@ -14,7 +15,6 @@
 	networkModemNotAvailable = "Attach modem to use network functions",
 	networkState = "Enable network mode",
 	networkComputers = "Network PCs options",
-	networkComputersNotFound = "Computers not fount",
 	networkName = "Name of this PC",
 	networkSearchRadius = "Searching radius",
 	openWith = "Open with",
