--- a/Localizations/OS/Russian.lang
+++ b/Localizations/OS/Russian.lang
@@ -1,4 +1,5 @@
 {
+	architecture = "Архитектура ЦП",
 	unloadPackage = "Выгрузить библиотеку",
 	networkFTPNewConnection = "FTP-подключение",
 	networkFTPConnections = "FTP-подключения",
@@ -14,7 +15,6 @@
 	networkModemNotAvailable = "Подключите модем для использования сетевых функций",
 	networkState = "Включить сетевой режим",
 	networkComputers = "Параметры удаленных ПК",
-	networkComputersNotFound = "Компьютеры в сети не обнаружены",
 	networkName = "Имя данного ПК",
 	networkSearchRadius = "Радиус обнаружения",
 	openWith = "Открыть с помощью",
