Обнова маркета с сообщениями

--- a/Applications/AppMarket/Localization/English.lang
+++ b/Applications/AppMarket/Localization/English.lang
@@ -1,10 +1,23 @@
 {
+	statistics = "Statistics",
+	messages = "Messages",
+	account = "Account",
+	settings = "Settings",
+	newMessage = "New message",
+	newMessageToDeveloper = "Personal message",
+	dialogWith = "Conversation with ",
+	send = "Send",
+	toWho = "To who:",
+	typeMessageText = "Type message text",
+	typeUserName = "Type user name",
+	yourText = "You:",
+	hereBeYourDialogs = "Here will be your conversations",
+
 	categoryOverview = "Overview",
 	categoryApplications = "Applications",
 	categoryLibraries = "Libraries",
 	categoryScripts = "Scripts",
 	categoryUpdates = "Updates",
-	categoryAccount = "Account",
 
 	statisticsNewUser = "New user",
 	statisticsMostPopularUser = "Most active",
