--- a/Applications/AppMarket/Localization/Russian.lang
+++ b/Applications/AppMarket/Localization/Russian.lang
@@ -1,10 +1,23 @@
 {
+	statistics = "Статистика",
+	messages = "Сообщения",
+	account = "Аккаунт",
+	settings = "Настройки",
+	newMessage = "Написать сообщение",
+	newMessageToDeveloper = "Личное сообщение",
+	dialogWith = "Диалог с ",
+	send = "Отправить",
+	toWho = "Кому:",
+	typeMessageText = "Введите текст сообщения",
+	typeUserName = "Введите имя пользователя",
+	yourText = "Вы:",
+	hereBeYourDialogs = "Здесь будут отображены ваши диалоги",
+
 	categoryOverview = "Главная",
 	categoryApplications = "Приложения",
 	categoryLibraries = "Библиотеки",
 	categoryScripts = "Скрипты",
 	categoryUpdates = "Обновления",
-	categoryAccount = "Аккаунт",
 
 	statisticsNewUser = "Новый пользователь",
 	statisticsMostPopularUser = "Наиболее активный",
