--- a/Applications/AppMarket/Localization/English.lang
+++ b/Applications/AppMarket/Localization/English.lang
@@ -4,7 +4,8 @@
 	account = "Account",
 	settings = "Settings",
 	newMessage = "New message",
-	newMessageToDeveloper = "Personal message",
+	newMessagePersonal = "Personal message",
+	newMessageToDeveloper = "Send message",
 	dialogWith = "Conversation with ",
 	send = "Send",
 	toWho = "To who:",
@@ -53,8 +54,8 @@
 	password = "Password",
 	nicknameOrEmail = "E-Mail or nickname",
 	registrationDate = "Register date",
-	edit = "Edit",
-	remove = "Delete",
+	edit = "Edit publication",
+	remove = "Delete publication",
 	open = "Open",
 	clearCache = "Clear cache",
 	exit = "Log out",
