--- a/Applications/AppMarket/Localization/Russian.lang
+++ b/Applications/AppMarket/Localization/Russian.lang
@@ -4,7 +4,8 @@
 	account = "Аккаунт",
 	settings = "Настройки",
 	newMessage = "Написать сообщение",
-	newMessageToDeveloper = "Личное сообщение",
+	newMessagePersonal = "Личное сообщение",
+	newMessageToDeveloper = "Написать сообщение",
 	dialogWith = "Диалог с ",
 	send = "Отправить",
 	toWho = "Кому:",
@@ -53,7 +54,7 @@
 	password = "Пароль",
 	nicknameOrEmail = "E-Mail или никнейм",
 	registrationDate = "Дата регистрации",
-	edit = "Изменить",
+	edit = "Редактировать",
 	remove = "Удалить",
 	open = "Открыть",
 	clearCache = "Очистить кэш",
