Автоматическая выгрузка библиотек и более удобное меню

--- a/Localizations/OS/English.lang
+++ b/Localizations/OS/English.lang
@@ -1,6 +1,7 @@
 {
-	architecture = "CPU architecture",
-	unloadPackage = "Unload package",
+	CPUArchitecture = "CPU architecture",
+	RAMControl = "RAM control",
+	packageUnloading = "Automatic unloading",
 	networkFTPNewConnection = "FTP-connection",
 	networkFTPConnections = "FTP-connections",
 	networkFTPAddress = "Server address",
