Какие-то фиксы какой-то хуйни

--- a/Localizations/OS/English.lang
+++ b/Localizations/OS/English.lang
@@ -1,4 +1,5 @@
 {
+	downloading = "Downloading in progress",
 	CPUArchitecture = "CPU architecture",
 	RAMControl = "RAM control",
 	packageUnloading = "Automatic unloading",
