--- a/Localizations/OS/Russian.lang
+++ b/Localizations/OS/Russian.lang
@@ -1,4 +1,5 @@
 {
+	downloading = "Идет загрузка файла",
 	CPUArchitecture = "Архитектура ЦП",
 	RAMControl = "Управление памятью",
 	packageUnloading = "Автоматическая выгрузка",
