Жирный рефакторинг MineCode, давно уже пора было перевести его на новые версии АПИ

--- a/Applications/MineCodeIDE/Localization/English.lang
+++ b/Applications/MineCodeIDE/Localization/English.lang
@@ -1,4 +1,6 @@
 {	
+	arguments = "Separate arguments via comma",
+	launchWithArguments = "Run with arguments",	
 	addBreakpoint = "Add breakpoint",
 	clearBreakpoints = "Clear breakpoints",
 	finishDebug = "Stop",
