Уф, вот терь аще огонь прожка стала

--- a/Applications/MineCodeIDE/Localization/English.lang
+++ b/Applications/MineCodeIDE/Localization/English.lang
@@ -1,4 +1,5 @@
-{	
+{
+	openingFile = "Opening",
 	arguments = "Separate arguments via comma",
 	launchWithArguments = "Run with arguments",	
 	addBreakpoint = "Add breakpoint",
