Фича конверсии этой хуйни текстовой. Как ее... регистра, во

--- a/Applications/MineCodeIDE/Localization/English.lang
+++ b/Applications/MineCodeIDE/Localization/English.lang
@@ -1,4 +1,7 @@
 {
+	toUpperCase = "To upper",
+	toLowerCase = "To lower",
+	convertCase = "Convert case",
 	openingFile = "Opening",
 	arguments = "Separate arguments via comma",
 	launchWithArguments = "Run with arguments",	
