--- a/License/Russian.lang
+++ b/License/Russian.lang
@@ -1,6 +1,6 @@
 Внимательно прочтите условия данного лицензионного соглашения перед установкой операционной системы:
 
-Copyright (c) 2017 Timofeev Igor
+Copyright (c) 2014-2018 Timofeev Igor
 
 Данная лицензия разрешает лицам, получившим копию данного программного обеспечения и сопутствующей документации (в дальнейшем именуемыми «Программное Обеспечение»), безвозмездно использовать Программное Обеспечение без ограничений, включая неограниченное право на использование, копирование, изменение, слияние, публикацию, распространение, сублицензирование и/или продажу копий Программного Обеспечения, а также лицам, которым предоставляется данное Программное Обеспечение, при соблюдении следующих условий:
 
